gitops/env/dev/apps/web-frontend/overlay/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: web-frontend
          imagePullPolicy: Always
