gitops/env/dev/apps/web-frontend/overlay/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-frontend
spec:
  ingressClassName: traefik
  rules:
    - host: dev.intrachat.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-frontend
                port:
                  number: 80
